--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   image: ^3.1.1
   drag_and_drop_gridview: ^1.0.8
   audioplayers: ^0.18.1
-  sqflite: ^2.0.0+1
+  sqflite: ^2.0.1
 
 dev_dependencies:
   flutter_test:
