--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   drag_and_drop_gridview: ^1.0.8
   audioplayers: ^0.18.1
   sqflite: ^2.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
