--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   audioplayers: ^0.18.1
   sqflite: ^2.0.1
   intl: ^0.17.0
+  archive: ^3.3.0
 
 dev_dependencies:
   flutter_test:
