converting irregular puzzle done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   archive: ^3.3.0
   dio: ^4.0.6
   screenshot: ^1.2.3
-  share: ^2.0.4
+  share_plus: ^4.0.10
   uni_links: ^0.5.1
   fluttertoast: ^8.0.9
   path: ^1.8.0
